testdata/golden/sema/valid/ret_block_all_paths.fmt
// scenario: block expression where all reachable paths produce a value via ret
fn main(flag: bool) -> int {
    let x = {
        if flag {
            ret 1;
        } else {
            ret 2;
        }
    };
    return x;
}
