testdata/golden/sema/invalid/bool_condition_no_bool_method.fmt
// using a non-bool expression as condition without __bool
type NoBool = { value: int }

fn invalid_condition() {
    let data: NoBool = { value = 1 };
    if (data) {
        return;
    }
}
